--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml file generated for cool-bird-8245 on 2023-02-26T11:10:04-07:00
+# fly.toml file generated for know-it-all on 2023-03-09T12:09:20+01:00
 
 app = "know-it-all"
 kill_signal = "SIGINT"
