--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ reqwest = "0.11.14"
 serde = "1.0.154"
 serde_json = "1.0.94"
 teloxide = { version = "0.12.2", features = ["macros"] }
-tokio ={ version = "1.26.0", features = ["rt-multi-thread"]}
+tokio ={ version = "1.26.0", features = ["rt-multi-thread", "macros"]}
