--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,9 @@
-# fly.toml file generated for know-it-all on 2023-03-09T12:09:20+01:00
+# fly.toml file generated for know-it-all on 2023-03-09T16:21:25+01:00
 
 app = "know-it-all"
 kill_signal = "SIGINT"
 kill_timeout = 5
+primary_region = "mad"
 processes = []
 
 [experimental]
