--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = "1.0.154"
 serde_json = "1.0.94"
 teloxide = { version = "0.12.2", features = ["macros"] }
 tokio ={ version = "1.26.0", features = ["rt-multi-thread", "macros"]}
+warp = "0.3.3"
