--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ edition = "2021"
 [dependencies]
 async-openai = "0.9.2"
 dotenv = "0.15.0"
-log = "0.4.17"
-pretty_env_logger = "0.4.0"
 reqwest = "0.11.14"
 serde = "1.0.154"
 serde_json = "1.0.94"
 teloxide = { version = "0.12.2", features = ["macros"] }
 tokio ={ version = "1.26.0", features = ["rt-multi-thread", "macros"]}
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
+uuid = { version  = "1.3.0", features = ["v4","fast-rng"]}
 warp = "0.3.3"
